--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.0", features = ["derive"] }
 ordered-float = "4"
+sha2 = "0.10"
+hex = "0.4"
